# cgss-dmm-hook

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  config.json.example
docs/: ObscuredPrefs 加解密分析文档.md
src/: config.cpp  config.hpp  helper_main.cpp  helper_version.rc  hook.cpp  hook.hpp  il2cpp_symbols.cpp  il2cpp_symbols.hpp  log.cpp  proxy.cpp  stdinclude.hpp  version.def  version.rc
